# polonius-the-crab.rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-ZLIB  README.md  cargo_publish.sh  change_version.sh  fix-docsrs-li-details-summary.html  rust-toolchain.toml
.cargo/: config
.github/workflows/: CI.yml  future-proof.yml
src/: compile_fail_tests.md  lib.rs  macros.rs  try.rs
tests/: lending_iterator.rs  soundness.rs  try.rs
