# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[package]
name = "polonius-the-crab"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.0-rc1"  # Keep in sync
edition = "2018"
rust-version = "1.56.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/polonius-the-crab.rs"
documentation = "https://docs.rs/polonius-the-crab"
readme = "README.md"

description = "Tools to feature more lenient Polonius-based borrow-checker patterns in stable Rust."
# keywords = []

[features]
docs-rs = []  # allowed to break MSRV

ui-tests = ["docs-rs"]

polonius = []  # To be used with `-Zpolonius`

[dependencies]

[dev-dependencies]

[workspace]

[package.metadata.docs.rs]
features = ["docs-rs"]
rustdoc-args = [
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
