# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[package]
name = "polonius-the-crab"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.4.0"  # Keep in sync
edition = "2021"
rust-version = "1.67.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/polonius-the-crab.rs"
documentation = "https://docs.rs/polonius-the-crab"
readme = "README.md"

description = "Tools to feature more lenient Polonius-based borrow-checker patterns in stable Rust."
# keywords = []

[features]
better-docs = []  # allowed to break MSRV

ui-tests = ["better-docs"]

polonius = []  # To be used with `-Zpolonius`

[dependencies]
higher-kinded-types = "0.1.1"

[dev-dependencies]

[workspace]

[package.metadata.docs.rs]
features = ["better-docs"]
rustdoc-args = [
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
